--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2024/2024-Rd23-Qatar-Grand-Prix-Practice-1_rcm.csv">FP1: race
 control message csv</a></p>
+<p><a href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying.pdf">SQ:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_laptime.csv">SQ:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd22-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd22 Las Vegas Grand Prix</h2>
 <p><a href="./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf">FP1:
