--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd23-Qatar-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd22-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd22 Las Vegas Grand Prix</h2>
 <p><a href="./2024/2024-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf">FP1:
