--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd01-australian-grand-prix"
+id="toc-rd01-australian-grand-prix"><span
+class="toc-section-number">1.1</span> Rd01 Australian Grand
+Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.1</span> Pre-season test</a></li>
+class="toc-section-number">1.2</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -127,8 +131,17 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="pre-season-test"><span
-class="header-section-number">1.1</span> Pre-season test</h2>
+<h2 data-number="1.1" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.1</span> Rd01 Australian Grand Prix</h2>
+<p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<h2 data-number="1.2" id="pre-season-test"><span
+class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
