--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@ href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="pre-season-test"><span
 class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
