--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@ href="./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd01-Australian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="pre-season-test"><span
 class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
