--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd01-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd01 Australian Grand Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
