--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Sprint_rcm.csv">S:Race
 Control Message CSV</a></p>
+<p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd02-Chinese-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd02-Chinese-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd01-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd01 Australian Grand Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
