--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1_laptime.csv">FP1:
 laptime csv</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd02-chinese-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
