--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd02-chinese-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
