--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd06-Miami-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
+<p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd05-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd05 Saudi Arabian Grand
 Prix</h2>
