--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
+Message CSV</a></p>
 <h2 data-number="1.2" id="rd05-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd05 Saudi Arabian Grand
 Prix</h2>
