--- a/index.html
+++ b/index.html
@@ -33,28 +33,32 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd07-emilia-romagna-grand-prix"
+id="toc-rd07-emilia-romagna-grand-prix"><span
+class="toc-section-number">1.1</span> Rd07 Emilia Romagna Grand
+Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.1</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-saudi-arabian-grand-prix"
 id="toc-rd05-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.2</span> Rd05 Saudi Arabian Grand
+class="toc-section-number">1.3</span> Rd05 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd04-bahrain-grand-prix"
 id="toc-rd04-bahrain-grand-prix"><span
-class="toc-section-number">1.3</span> Rd04 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd04 Bahrain Grand Prix</a></li>
 <li><a href="#rd03-japanese-grand-prix"
 id="toc-rd03-japanese-grand-prix"><span
-class="toc-section-number">1.4</span> Rd03 Japanese Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd03 Japanese Grand Prix</a></li>
 <li><a href="#rd02-chinese-grand-prix"
 id="toc-rd02-chinese-grand-prix"><span
-class="toc-section-number">1.5</span> Rd02 Chinese Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd02 Chinese Grand Prix</a></li>
 <li><a href="#rd01-australian-grand-prix"
 id="toc-rd01-australian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd01 Australian Grand
+class="toc-section-number">1.7</span> Rd01 Australian Grand
 Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.7</span> Pre-season test</a></li>
+class="toc-section-number">1.8</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -114,8 +118,8 @@ class="toc-section-number">2.16</span> Rd09 Canadian Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
 class="toc-section-number">2.17</span> Rd08 Monaco Grand Prix</a></li>
-<li><a href="#rd07-emilia-romagna-grand-prix"
-id="toc-rd07-emilia-romagna-grand-prix"><span
+<li><a href="#rd07-emilia-romagna-grand-prix-1"
+id="toc-rd07-emilia-romagna-grand-prix-1"><span
 class="toc-section-number">2.18</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix-1"
@@ -147,8 +151,20 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.1</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.1" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.1</span> Rd07 Emilia Romagna Grand
+Prix</h2>
+<p><a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.2</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -185,8 +201,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.2" id="rd05-saudi-arabian-grand-prix"><span
-class="header-section-number">1.2</span> Rd05 Saudi Arabian Grand
+<h2 data-number="1.3" id="rd05-saudi-arabian-grand-prix"><span
+class="header-section-number">1.3</span> Rd05 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -233,8 +249,8 @@ href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd04-bahrain-grand-prix"><span
-class="header-section-number">1.3</span> Rd04 Bahrain Grand Prix</h2>
+<h2 data-number="1.4" id="rd04-bahrain-grand-prix"><span
+class="header-section-number">1.4</span> Rd04 Bahrain Grand Prix</h2>
 <p><a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -262,8 +278,8 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
-<h2 data-number="1.4" id="rd03-japanese-grand-prix"><span
-class="header-section-number">1.4</span> Rd03 Japanese Grand Prix</h2>
+<h2 data-number="1.5" id="rd03-japanese-grand-prix"><span
+class="header-section-number">1.5</span> Rd03 Japanese Grand Prix</h2>
 <p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -300,8 +316,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd02-chinese-grand-prix"><span
-class="header-section-number">1.5</span> Rd02 Chinese Grand Prix</h2>
+<h2 data-number="1.6" id="rd02-chinese-grand-prix"><span
+class="header-section-number">1.6</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -341,8 +357,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd01-australian-grand-prix"><span
-class="header-section-number">1.6</span> Rd01 Australian Grand Prix</h2>
+<h2 data-number="1.7" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.7</span> Rd01 Australian Grand Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -380,8 +396,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="pre-season-test"><span
-class="header-section-number">1.7</span> Pre-season test</h2>
+<h2 data-number="1.8" id="pre-season-test"><span
+class="header-section-number">1.8</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
@@ -1069,7 +1085,7 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="2.18" id="rd07-emilia-romagna-grand-prix"><span
+<h2 data-number="2.18" id="rd07-emilia-romagna-grand-prix-1"><span
 class="header-section-number">2.18</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
