Add 2025 Rd08 Monaco GP FP1

--- a/index.html
+++ b/index.html
@@ -33,32 +33,35 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd08-monaco-grand-prix"
+id="toc-rd08-monaco-grand-prix"><span
+class="toc-section-number">1.1</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.1</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.2</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.2</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-saudi-arabian-grand-prix"
 id="toc-rd05-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.3</span> Rd05 Saudi Arabian Grand
+class="toc-section-number">1.4</span> Rd05 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd04-bahrain-grand-prix"
 id="toc-rd04-bahrain-grand-prix"><span
-class="toc-section-number">1.4</span> Rd04 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd04 Bahrain Grand Prix</a></li>
 <li><a href="#rd03-japanese-grand-prix"
 id="toc-rd03-japanese-grand-prix"><span
-class="toc-section-number">1.5</span> Rd03 Japanese Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd03 Japanese Grand Prix</a></li>
 <li><a href="#rd02-chinese-grand-prix"
 id="toc-rd02-chinese-grand-prix"><span
-class="toc-section-number">1.6</span> Rd02 Chinese Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd02 Chinese Grand Prix</a></li>
 <li><a href="#rd01-australian-grand-prix"
 id="toc-rd01-australian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd01 Australian Grand
+class="toc-section-number">1.8</span> Rd01 Australian Grand
 Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.8</span> Pre-season test</a></li>
+class="toc-section-number">1.9</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -115,8 +118,8 @@ class="toc-section-number">2.15</span> Rd10 Spanish Grand Prix</a></li>
 <li><a href="#rd09-canadian-grand-prix"
 id="toc-rd09-canadian-grand-prix"><span
 class="toc-section-number">2.16</span> Rd09 Canadian Grand Prix</a></li>
-<li><a href="#rd08-monaco-grand-prix"
-id="toc-rd08-monaco-grand-prix"><span
+<li><a href="#rd08-monaco-grand-prix-1"
+id="toc-rd08-monaco-grand-prix-1"><span
 class="toc-section-number">2.17</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix-1"
 id="toc-rd07-emilia-romagna-grand-prix-1"><span
@@ -151,8 +154,16 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.1</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.1" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.1</span> Rd08 Monaco Grand Prix</h2>
+<p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.2</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -200,8 +211,8 @@ href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.2</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.3" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.3</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -238,8 +249,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.3" id="rd05-saudi-arabian-grand-prix"><span
-class="header-section-number">1.3</span> Rd05 Saudi Arabian Grand
+<h2 data-number="1.4" id="rd05-saudi-arabian-grand-prix"><span
+class="header-section-number">1.4</span> Rd05 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -286,8 +297,8 @@ href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd04-bahrain-grand-prix"><span
-class="header-section-number">1.4</span> Rd04 Bahrain Grand Prix</h2>
+<h2 data-number="1.5" id="rd04-bahrain-grand-prix"><span
+class="header-section-number">1.5</span> Rd04 Bahrain Grand Prix</h2>
 <p><a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -315,8 +326,8 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
-<h2 data-number="1.5" id="rd03-japanese-grand-prix"><span
-class="header-section-number">1.5</span> Rd03 Japanese Grand Prix</h2>
+<h2 data-number="1.6" id="rd03-japanese-grand-prix"><span
+class="header-section-number">1.6</span> Rd03 Japanese Grand Prix</h2>
 <p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -353,8 +364,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd02-chinese-grand-prix"><span
-class="header-section-number">1.6</span> Rd02 Chinese Grand Prix</h2>
+<h2 data-number="1.7" id="rd02-chinese-grand-prix"><span
+class="header-section-number">1.7</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -394,8 +405,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd01-australian-grand-prix"><span
-class="header-section-number">1.7</span> Rd01 Australian Grand Prix</h2>
+<h2 data-number="1.8" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.8</span> Rd01 Australian Grand Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -433,8 +444,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="pre-season-test"><span
-class="header-section-number">1.8</span> Pre-season test</h2>
+<h2 data-number="1.9" id="pre-season-test"><span
+class="header-section-number">1.9</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
@@ -1088,7 +1099,7 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.17" id="rd08-monaco-grand-prix"><span
+<h2 data-number="2.17" id="rd08-monaco-grand-prix-1"><span
 class="header-section-number">2.17</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
