Add 2025 Rd08 Monaco GP FP2

--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-2.pdf">FP2: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd07-emilia-romagna-grand-prix"><span
 class="header-section-number">1.2</span> Rd07 Emilia Romagna Grand
 Prix</h2>
