Add 2025 Rd08 Monaco GP FP3

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-2_rcm.csv">FP2:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-3.pdf">FP3: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-3_laptime.csv">FP3:
+laptime csv</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-3_rcm.csv">FP3:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd07-emilia-romagna-grand-prix"><span
 class="header-section-number">1.2</span> Rd07 Emilia Romagna Grand
 Prix</h2>
