Add 2025 Rd08 Monaco GP Race

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
+Message CSV</a></p>
 <h2 data-number="1.2" id="rd07-emilia-romagna-grand-prix"><span
 class="header-section-number">1.2</span> Rd07 Emilia Romagna Grand
 Prix</h2>
